--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "dashboard",
+  "name": "financas-pro-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "API para o Dashboard Financeiro",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "body-parser": "^2.2.2",
-    "cors": "^2.8.6",
-    "express": "^5.2.1",
-    "mongoose": "^9.2.1"
-  }
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.0"
+  },
+  "author": "",
+  "license": "ISC"
 }
